# Octal-Engine

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  WHAT_TO_DO.md  changelog.txt
cmake/: OctalEngine.cmake  OctalEngineConfig.cmake.in
docs/internal/: build.md  info.md
docs/public/: README.md  engine-loop.md  getting-started.md
docs/public/api/: README.md  engine.md  events.md  game-loop.md  input.md  jobs.md  platform-system.md  platform.md  renderer.md  time.md  window.md
engine/core/: Engine.cpp  Engine.h  EngineTime.cpp  EngineTime.h  Events.h  Loop.cpp  Loop.h  Platform.h
engine/input/: InputManager.cpp  InputManager.h
engine/jobs/: JobSystem.cpp  JobSystem.h
engine/platform/: PlatformSystem.cpp  PlatformSystem.h  Window.cpp  Window.h
engine/renderer/: Material.h  Mesh.cpp  Mesh.h  RenderCommand.h  Renderer.cpp  Renderer.h  RendererMath.h
engine/renderer/backend/: IRendererBackend.h  bgfx_backend.cpp  bgfx_backend.h
engine/renderer/internal/: RenderCommands.h  RenderThread.cpp  RenderThread.h
examples/: headless.cpp  rendering_a_cube.cpp
scripts/: bgfxConfig.txt  build_bgfx.ps1  build_sdl2.ps1  get_bgfx.ps1  get_sdl2.ps1  push.ps1
test/: main.cpp  test.cpp  windowed.cpp
